Fix css issue with debugger window cut off #699

--- a/front-end/inspectorCommon.css
+++ b/front-end/inspectorCommon.css
@@ -102,6 +102,8 @@ body /deep/ .vbox {
     display: flex;
     flex-direction: column !important;
     position: relative;
+    min-width: 0;
+    min-height: 0;
 }
 
 body /deep/ .flex-auto {
